<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.notifications.NotificationsFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:text="@string/genre1"
            android:textStyle="bold"
            android:textSize="20sp" />

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/rv_genre_list1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_snap_count="1" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_drama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:text="@string/genre2"
            android:textStyle="bold"
            android:textSize="20sp" />

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/rv_genre_list2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_snap_count="2" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:text="@string/genre3"
            android:textStyle="bold"
            android:textSize="20sp" />

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/rv_genre_list3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_snap_count="3" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_fantasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:text="@string/genre4"
            android:textStyle="bold"
            android:textSize="20sp" />

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/rv_genre_list4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_snap_count="4" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_comedy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:text="@string/genre5"
            android:textStyle="bold"
            android:textSize="20sp" />

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/rv_genre_list5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_snap_count="5" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_scifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:text="@string/genre6"
            android:textStyle="bold"
            android:textSize="20sp" />

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/rv_genre_list6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_snap_count="6" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

    </LinearLayout>
</ScrollView>